--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "pet = Pytanque(\"127.0.0.1\", 8765)\n",
     "pet.connect()\n",
-    "pet.init(root=\".\")\n"
+    "env = pet.init(root=\".\")"
    ]
   },
   {
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pet.start(file=\"./foo.v\", thm=\"addnC\")"
+    "state = pet.start(file=\"./foo.v\", thm=\"addnC\")"
    ]
   },
   {
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Internal pytanque state: 13\n",
+      "Internal pytanque state: CurrentState(value=7)\n",
       "Prover goals: GoalsResponse(goals=[Goal(info={'evar': ['Ser_Evar', 12], 'name': None}, hyps=[GoalHyp(names=['n', 'm'], ty='nat', def_=None)], ty='n + m = m + n')])\n",
       "\n",
       "n, m  : nat\n",
@@ -87,12 +87,11 @@
     }
    ],
    "source": [
-    "g = pet.current_state()\n",
-    "print(f\"Internal pytanque state: {g}\")\n",
+    "print(f\"Internal pytanque state: {state}\")\n",
     "\n",
-    "goals = pet.goals() # Retrieve actual state\n",
+    "goals = pet.goals(state)  # Retrieve actual state\n",
     "print(f\"Prover goals: {goals}\\n\")\n",
-    "goals.pp() # Pretty print the current goals"
+    "goals.pp()  # Pretty print the current goals"
    ]
   },
   {
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +127,8 @@
     }
    ],
    "source": [
-    "pet.run_tac(\"induction n.\")\n",
-    "goals = pet.goals()\n",
+    "state = pet.run_tac(state, \"induction n.\")\n",
+    "goals = pet.goals(state)\n",
     "goals.pp()"
    ]
   },
@@ -137,46 +136,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can always undo a tactic with the `backtrack` method, or restart the entire proof of the current theorem with `reset`."
+    "If the proof is finished (no more goal) the state becomes `ProofFinished`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ProofFinished(value=10)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state = pet.start(file=\"./foo.v\", thm=\"addnC\")\n",
+    "state = pet.run_tac(state, \"by elim: n => //= ? ->.\")\n",
+    "state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Proof search\n",
+    "\n",
+    "Adapted from the NeurIPS 2024 tuorial: https://github.com/yangky11/ml4tp-tutorial/blob/main/main.ipynb \n",
+    "\n",
+    "Let us start with a dummy tactic generator (random sampling in a list of tactics)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "def generate_tactics(goal: str, num_candidates: int):\n",
+    "    tactics = [\n",
+    "        \"intros.\",\n",
+    "        \"auto.\",\n",
+    "        \"simpl.\",\n",
+    "        \"induction n.\",\n",
+    "        \"easy.\",\n",
+    "        \"trivial.\",\n",
+    "        \"rewrite IHn.\",\n",
+    "    ]\n",
+    "    return random.choices(tactics, k=num_candidates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now implement depth-first search to search for proofs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional\n",
+    "import pytanque as pt\n",
+    "\n",
+    "Tactic = str\n",
+    "Proof = List[Tactic]\n",
+    "\n",
+    "num_candidates = 16\n",
+    "depth_limit = 3\n",
+    "\n",
+    "\n",
+    "def dfs_search(state, depth: int) -> Optional[Proof]:\n",
+    "    \"\"\"Try to prove `state` using depth-first search (DFS).\"\"\"\n",
+    "    if depth >= depth_limit:\n",
+    "        return None\n",
+    "\n",
+    "    tactics = generate_tactics(state, num_candidates)\n",
+    "\n",
+    "    # Run the tactics.\n",
+    "    for tac in tactics:\n",
+    "        try:\n",
+    "            next_state = pet.run_tac(state, tac)\n",
+    "            match next_state:\n",
+    "                case pt.ProofFinished(st):\n",
+    "                    return [tac]\n",
+    "                case pt.CurrentState(st):\n",
+    "                    subproof = dfs_search(next_state, depth + 1)\n",
+    "                    if subproof:\n",
+    "                        return [tac] + subproof\n",
+    "        except pt.PetanqueError:\n",
+    "            pass\n",
+    "    return []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us try on a simple example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Undo induction n., back to 14\n"
+      "Proof: intros. intros. auto.\n"
      ]
     }
    ],
    "source": [
-    "(st, tac) = pet.backtrack()\n",
-    "print(f\"Undo {tac}, back to {st}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ProofFinished(value=16)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pet.reset()\n",
-    "pet.run_tac(\"by elim: n => //= ? ->.\")"
+    "state = pet.start(file=\"./foo.v\", thm=\"t\")\n",
+    "proof = dfs_search(state, depth=0)\n",
+    "\n",
+    "if proof:\n",
+    "    print(f\"Proof: {\" \".join(proof)}\")\n",
+    "else:\n",
+    "    print(\"Not proof found...\")"
    ]
   },
   {
