--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,22 +67,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Internal pytanque state: CurrentState(value=7)\n",
+      "Internal pytanque state: CurrentState(value=1)\n",
       "Prover goals: GoalsResponse(goals=[Goal(info={'evar': ['Ser_Evar', 12], 'name': None}, hyps=[GoalHyp(names=['n', 'm'], ty='nat', def_=None)], ty='n + m = m + n')])\n",
       "\n",
       "n, m  : nat\n",
       "-----------------------------\n",
-      "n + m = m + n\n",
-      "\n",
-      "\n",
-      "\n"
+      "n + m = m + n\n"
      ]
     }
    ],
@@ -91,7 +88,7 @@
     "\n",
     "goals = pet.goals(state)  # Retrieve actual state\n",
     "print(f\"Prover goals: {goals}\\n\")\n",
-    "goals.pp()  # Pretty print the current goals"
+    "print(goals.pp())  # Pretty print the current goals"
    ]
   },
   {
@@ -103,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,22 +111,17 @@
       "-----------------------------\n",
       "0 + m = m + 0\n",
       "\n",
-      "\n",
-      "\n",
       "n, m  : nat\n",
       "IHn  : n + m = m + n\n",
       "-----------------------------\n",
-      "S n + m = m + S n\n",
-      "\n",
-      "\n",
-      "\n"
+      "S n + m = m + S n\n"
      ]
     }
    ],
    "source": [
     "state = pet.run_tac(state, \"induction n.\")\n",
     "goals = pet.goals(state)\n",
-    "goals.pp()"
+    "print(goals.pp())"
    ]
   },
   {
@@ -141,16 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ProofFinished(value=10)"
+       "ProofFinished(value=4)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,14 +159,14 @@
    "source": [
     "# Proof search\n",
     "\n",
-    "Adapted from the NeurIPS 2024 tuorial: https://github.com/yangky11/ml4tp-tutorial/blob/main/main.ipynb \n",
+    "Adapted from the NeurIPS 2024 tutorial: https://github.com/yangky11/ml4tp-tutorial/blob/main/main.ipynb \n",
     "\n",
-    "Let us start with a dummy tactic generator (random sampling in a list of tactics)."
+    "Let us start with a dummy tactic generator (random sampling in a list of tactics) with random scores for each tactics in $[0, 1]$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +183,9 @@
     "        \"trivial.\",\n",
     "        \"rewrite IHn.\",\n",
     "    ]\n",
-    "    return random.choices(tactics, k=num_candidates)"
+    "    return random.choices(tactics, k=num_candidates), [\n",
+    "        random.uniform(0, 1) for _ in range(num_candidates)\n",
+    "    ]"
    ]
   },
   {
@@ -203,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,17 +206,18 @@
     "\n",
     "Tactic = str\n",
     "Proof = List[Tactic]\n",
+    "Score = float\n",
     "\n",
     "num_candidates = 16\n",
     "depth_limit = 3\n",
     "\n",
     "\n",
-    "def dfs_search(state, depth: int) -> Optional[Proof]:\n",
+    "def depth_first_search(state, depth: int) -> Optional[Proof]:\n",
     "    \"\"\"Try to prove `state` using depth-first search (DFS).\"\"\"\n",
     "    if depth >= depth_limit:\n",
     "        return None\n",
     "\n",
-    "    tactics = generate_tactics(state, num_candidates)\n",
+    "    tactics, _ = generate_tactics(state, num_candidates)\n",
     "\n",
     "    # Run the tactics.\n",
     "    for tac in tactics:\n",
@@ -232,12 +227,12 @@
     "                case pt.ProofFinished(st):\n",
     "                    return [tac]\n",
     "                case pt.CurrentState(st):\n",
-    "                    subproof = dfs_search(next_state, depth + 1)\n",
+    "                    subproof = depth_first_search(next_state, depth + 1)\n",
     "                    if subproof:\n",
     "                        return [tac] + subproof\n",
     "        except pt.PetanqueError:\n",
     "            pass\n",
-    "    return []"
+    "    return None"
    ]
   },
   {
@@ -249,20 +244,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: intros. intros. auto.\n"
+      "Proof: trivial. simpl. auto.\n"
      ]
     }
    ],
    "source": [
     "state = pet.start(file=\"./foo.v\", thm=\"t\")\n",
-    "proof = dfs_search(state, depth=0)\n",
+    "proof = depth_first_search(state, depth=0)\n",
+    "\n",
+    "if proof:\n",
+    "    print(f\"Proof: {\" \".join(proof)}\")\n",
+    "else:\n",
+    "    print(\"Not proof found...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is an implementation of best-first search adapted from the 2023 Neural theorem proving tutorial https://github.com/wellecks/ntptutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "from tqdm import trange\n",
+    "import logging\n",
+    "\n",
+    "def best_first_search(init_state, max_iters, num_samples) -> Optional[Proof]:\n",
+    "    queue = [(0.0, [], init_state)]\n",
+    "    visited = set()\n",
+    "    for _ in trange(max_iters):\n",
+    "        if len(queue) == 0:\n",
+    "            break\n",
+    "\n",
+    "        total_score, steps, state = heapq.heappop(queue)\n",
+    "        goals = pet.goals(state)\n",
+    "        visited.add(goals.pp())\n",
+    "\n",
+    "        step_cands, step_scores = generate_tactics(state, num_samples)\n",
+    "\n",
+    "        for step, score in zip(step_cands, step_scores):\n",
+    "            try:\n",
+    "                result = pet.run_tac(state, step)\n",
+    "                match result:\n",
+    "                    case pt.ProofFinished():\n",
+    "                        return steps + [step]\n",
+    "                    case pt.CurrentState():\n",
+    "                        next_goals = pet.goals(result)\n",
+    "                        if next_goals.pp() not in visited:\n",
+    "                            # Score is negative log probability summed across steps\n",
+    "                            new_score = total_score - score\n",
+    "                            heapq.heappush(queue, (new_score, steps + [step], result))\n",
+    "            except pt.PetanqueError as err:\n",
+    "                logging.warning(f\"Invalid Tactic: {step} {err}\")\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 1/3 [00:00<00:00, 206.32it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proof: simpl. auto.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "state = pet.start(file=\"./foo.v\", thm=\"t\")\n",
+    "proof = best_first_search(state, max_iters=3, num_samples=3)\n",
     "\n",
     "if proof:\n",
     "    print(f\"Proof: {\" \".join(proof)}\")\n",
