--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,18 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./scratch.v\", 'w') as file:\n",
-    "    code = \"\"\"\n",
-    "Lemma test n : 1 + n > n.\n",
-    "    \"\"\"\n",
-    "    print(code, file=file)\n",
+    "file_name = \"scratch.v\"\n",
+    "thm_name = \"test\"\n",
+    "thm_body = \"n : 1 + n > n\"\n",
+    "\n",
+    "with open(f\"./{file_name}\", 'w') as file:\n",
+    "    print(f\"Lemma {thm_name}: {thm_body}.\", file=file)\n",
     "\n",
     "\n",
-    "state = pet.start(file=\"./scratch.v\", thm=\"test\")"
+    "state = pet.start(file=file_name, thm=thm_name)"
    ]
   },
   {
@@ -257,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: simpl. simpl. auto.\n"
+      "Proof: intros. intros. auto.\n"
      ]
     }
    ],
@@ -327,6 +328,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "  0%|          | 0/20 [00:00<?, ?it/s]WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
       "  0%|          | 0/20 [00:00<?, ?it/s]"
      ]
     },
