--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_name = \"scratch.v\"\n",
     "thm_name = \"test\"\n",
-    "thm_body = \"n : 1 + n > n\"\n",
+    "thm_body = \"n : 2 * n = n + n\"\n",
     "\n",
     "with open(f\"./{file_name}\", 'w') as file:\n",
-    "    print(f\"Lemma {thm_name}: {thm_body}.\", file=file)\n",
+    "    print(f\"Lemma {thm_name} {thm_body}.\", file=file)\n",
     "\n",
     "\n",
     "state = pet.start(file=file_name, thm=thm_name)"
@@ -83,11 +83,11 @@
      "output_type": "stream",
      "text": [
       "Internal pytanque state: CurrentState(value=1)\n",
-      "Prover goals: GoalsResponse(goals=[Goal(info={'evar': ['Ser_Evar', 3], 'name': None}, hyps=[GoalHyp(names=['n'], ty='nat', def_=None)], ty='1 + n > n')])\n",
+      "Prover goals: GoalsResponse(goals=[Goal(info={'evar': ['Ser_Evar', 4], 'name': None}, hyps=[GoalHyp(names=['n'], ty='nat', def_=None)], ty='2 * n = n + n')])\n",
       "\n",
       "n  : nat\n",
       "-----------------------------\n",
-      "1 + n > n\n"
+      "2 * n = n + n\n"
      ]
     }
    ],
@@ -117,12 +117,12 @@
      "text": [
       "\n",
       "-----------------------------\n",
-      "1 + 0 > 0\n",
+      "2 * 0 = 0 + 0\n",
       "\n",
       "n  : nat\n",
-      "IHn  : 1 + n > n\n",
+      "IHn  : 2 * n = n + n\n",
       "-----------------------------\n",
-      "1 + S n > S n\n"
+      "2 * S n = S n + S n\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "ProofFinished(value=4)"
+       "CurrentState(value=4)"
       ]
      },
      "execution_count": 6,
@@ -258,12 +258,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: intros. intros. auto.\n"
+      "Proof: simpl. intros. auto.\n"
      ]
     }
    ],
    "source": [
-    "state = pet.start(file=\"./scratch.v\", thm=\"test\")\n",
+    "state = pet.start(file=file_name, thm=thm_name)\n",
     "proof = depth_first_search(state, depth=0)\n",
     "\n",
     "if proof:\n",
@@ -321,22 +321,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
-      "  0%|          | 0/20 [00:00<?, ?it/s]"
+      "  0%|          | 0/20 [00:00<?, ?it/s]WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
+      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
+      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
+      "WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
+      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
+      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * n\" in the current goal.')\n",
+      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
+      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
+      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
+      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
+      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * 0\" in the current goal.')\n",
+      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * 0\" in the current goal.')\n",
+      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * 0\" in the current goal.')\n",
+      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * S n\" in the current goal.')\n",
+      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * S n\" in the current goal.')\n",
+      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * S n\" in the current goal.')\n",
+      "WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
+      "WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
+      " 40%|████      | 8/20 [00:00<00:00, 167.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: auto.\n"
+      "Proof: induction n. easy. simpl. auto.\n"
      ]
     },
     {
@@ -348,7 +365,7 @@
     }
    ],
    "source": [
-    "state = pet.start(file=\"./scratch.v\", thm=\"test\")\n",
+    "state = pet.start(file=file_name, thm=thm_name)\n",
     "proof = best_first_search(state, max_iters=20, num_samples=5)\n",
     "\n",
     "if proof:\n",
